syntax = "proto3";

option csharp_namespace = "NewsMicroservice.Protos";

service NewsService {
    rpc GetServiceNewsById (GetServiceNewsByIdRequest) returns (GetServiceNewsByIdResponse);
}

message GetServiceNewsByIdRequest {
    string newsId = 1;
}

message GetServiceNewsByIdResponse {
    string id = 1;
    string title = 2;
    string description = 3;
    string short_description = 4;
    string author_id = 5;
    string skills = 6;
    string date = 7; 
    bool success = 8;
    string message = 9;
}